# Rnvvm

./: DESCRIPTION  NAMESPACE  README.md  configure  configure.in
R/: classes.R  highLevel.R  manual.R  nvvm.R  nvvmResult.R  raiseError.R
TU/: docs.R
Web/: GNUmakefile  index.html  index.html.in
inst/doc/: dnormEg.Rdb
inst/sampleCode/: dnorm.ir
man/: createProgram.Rd  generatePTX.Rd  getErrorString.Rd  version.Rd
src/: Makevars.in  RConverters.c  RConverters.h  Rnvvm.h  manual.c  nvvm.c  nvvmResult.c
tests/: basics.R  check.R
